# social-media-api

./: .gitignore  pyproject.toml
social_media/: config.py  database.py  main.py
social_media/models/: post.py
social_media/routers/: post.py
tests/: conftest.py
tests/routers/: test_post.py
