[tool.poetry]
name = "social-media"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
databases = {extras = ["aiosqlite", "asyncpg"], version = "^0.8.0"}
sqlalchemy = "1.4.51"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ipython = "^8.21.0"
pytest = "^8.0.0"
httpx = {extras = ["cli"], version = "^0.26.0"}
trio = "^0.24.0"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"